<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#16181F">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <TextView
        android:id="@+id/eventDetailsTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Edit Event Details"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/posterImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="42dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDetailsTextview"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/qrImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="71dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/posterImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDetailsTextview"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/eventNameEditText"
        android:layout_width="349dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corner_rectangle_light_black"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/event_name"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="#848A94"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/replacePosterbutton" />

    <EditText
        android:id="@+id/maxAttendeesEditText"
        android:layout_width="349dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_rectangle_light_black"
        android:fontFamily="@font/poppins_semibold"
        android:hint="Max Attendees"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="#848A94"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/eventNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="349dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_rectangle_light_black"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/location"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="#848A94"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/maxAttendeesEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/dateTimeEditText"
        android:layout_width="349dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_rectangle_light_black"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/date_time"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="#848A94"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/locationEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="349dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_rectangle_light_black"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/description"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="#848A94"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/dateTimeEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/geolocationRequirementTextView"
        android:layout_width="349dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corner_rectangle_light_gray"
        android:fontFamily="@font/poppins_semibold"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:text="@string/geo_location_requirement"
        android:textAlignment="viewStart"
        android:textColor="#848A94"
        android:textSize="15sp"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notifPreferenceTextView"
        android:layout_width="349dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_corner_rectangle_light_gray"
        android:fontFamily="@font/poppins_semibold"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:textAlignment="textStart"
        android:textColor="#848A94"
        android:textSize="15sp"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="center"
        android:layout_marginTop="10dp"
        android:text="@string/notification_preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/geolocationRequirementTextView" />

    <Button
        android:id="@+id/replaceQRbutton"
        android:layout_width="161dp"
        android:layout_height="47dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#FF8C00"
        android:text="Replace QR Code"
        app:layout_constraintEnd_toStartOf="@+id/replacePosterbutton"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qrImageView" />

    <Button
        android:id="@+id/replacePosterbutton"
        android:layout_width="161dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#FF8C00"
        android:text="Replace Poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posterImageView" />

    <Button
        android:id="@+id/save_changes_button"
        android:layout_width="347dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#17AF42"
        android:text="Save Changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
