<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#16181F">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <TextView
        android:id="@+id/eventDetailsTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/event_details_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/posterImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/qrImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="71dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/posterImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/eventNameEditText"
        android:layout_width="349dp"
        android:layout_height="45dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/rounded_corner_rectangle_light_black"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/event_name"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="#848A94"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_poster_button" />

    <TextView
        android:id="@+id/facilityEditText"
        android:layout_width="349dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_rectangle_light_black"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/facility"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="#848A94"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/eventNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/locationEditText"
        android:layout_width="349dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_rectangle_light_black"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/location"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="#848A94"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/facilityEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dateTimeEditText"
        android:layout_width="349dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:focusable="false"
        android:background="@drawable/rounded_corner_rectangle_light_black"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/date_time"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="#848A94"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/locationEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descriptionEditText"
        android:layout_width="349dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_rectangle_light_black"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/description"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="#848A94"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/dateTimeEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/max_attendees_textview"
        android:layout_width="349dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_rectangle_light_black"
        android:fontFamily="@font/poppins_semibold"
        android:hint="Max Attendees"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="#848A94"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/geolocationRequirementTextView"
        android:layout_width="349dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_rectangle_light_black"
        android:fontFamily="@font/poppins_semibold"
        android:hint="Geolocation Requirement"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="#848A94"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/max_attendees_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/remove_qr_button"
        android:layout_width="162dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#90FF3535"
        android:text="Remove QR Code"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qrImageView" />

    <Button
        android:id="@+id/remove_poster_button"
        android:layout_width="162dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#90FF3535"
        android:text="Remove Poster"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posterImageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="146dp"
        android:layout_height="19dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="21dp"
        android:text="Click to Expand"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDetailsTextview" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="146dp"
        android:layout_height="19dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="36dp"
        android:text="Click to Expand"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDetailsTextview" />

</androidx.constraintlayout.widget.ConstraintLayout>
